[package]
name = "block_listner"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = { git = "https://github.com/blockworks-foundation/solana", branch="lite_rpc" }
solana-client= { git = "https://github.com/blockworks-foundation/solana", branch="lite_rpc" }
solana-transaction-status = { git = "https://github.com/blockworks-foundation/solana", branch="lite_rpc" }
tracing-subscriber = "0.3.16"
log = "0.4.17"
tokio = { version = "1.25.0", features = ["full"]} 
anyhow = "1.0.69"
clap = { version = "4.1.4", features = ["derive"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde_json = "1.0.93"
futures = "0.3.26"
async-channel = "1.8.0"

